--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,18 @@
 name: flutterflip
 description: A Reversi game built in Flutter.
 
+environment:
+  sdk: ">=2.4.0 <3.0.0"
+
 dependencies:
-  async: ^2.0.7
+  async: ^2.2.0
   flutter:
     sdk: flutter
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  pedantic: ^1.7.0
 
 flutter:
 
