--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,17 +2,17 @@ name: flutterflip
 description: A Reversi game built in Flutter.
 
 environment:
-  sdk: '>=2.11.0-213.0.dev <2.12.0'
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  async: ^2.4.2
+  async: ^2.8.1
   flutter:
     sdk: flutter
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  pedantic: ^1.9.2
+  flutter_lints: ^1.0.4
 
 flutter:
 
