--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,18 +1,18 @@
 name: flutterflip
-description: A Reversi game built in Flutter.
+description: A Reversi game built with Flutter.
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.17.0 <3.0.0'
 
 dependencies:
-  async: ^2.8.1
+  async: ^2.8.2
   flutter:
     sdk: flutter
 
 dev_dependencies:
+  flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
-  flutter_lints: ^1.0.4
 
 flutter:
 
@@ -22,11 +22,3 @@ flutter:
         - asset: assets/fonts/Roboto-Thin.ttf
         - asset: assets/fonts/Roboto-ThinItalic.ttf
           style: italic
-
-
-
-
-
-
-
-
